--- a/XmasClock/XmasClock/XmasClock.csproj
+++ b/XmasClock/XmasClock/XmasClock.csproj
@@ -5,12 +5,16 @@
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <PublishAot>False</PublishAot>
+    <UserSecretsId>c992c68a-890b-4f88-801d-34d339ed5f56</UserSecretsId>
+    <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
+    <DockerfileContext>..\..</DockerfileContext>
   </PropertyGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\XmasClock.Client\XmasClock.Client.csproj" />
     <PackageReference Include="BlazorAnimation" Version="2.2.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.Server" Version="8.0.0" />
+    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
   </ItemGroup>
 
 </Project>
